testsuite/tests/patsyn/should_fail/T9161-2.stderr

T9161-2.hs:8:20: error:
    Pattern synonym ‘PATTERN’ used as a type
    In the type signature:
      wrongLift :: Proxy PATTERN ()
